--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
    <link rel="stylesheet" href="css/style.css">
-   <title>Document</title>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script src="js/slick.min.js"></script>
+   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+   <script src="js/style.js"></script>
+   <title>exampleLayout</title>
 </head>
 
 <body>
@@ -495,10 +499,7 @@
    </div>
 
 
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="js/slick.min.js"></script>
-   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-   <script src="js/style.js"></script>
+
 </body>
 
 </html>
